--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ body {
 
 .header {
     margin-right: 20px;
+    margin-left: 20px;
     grid-column: 1 / 4;
     display: flex;
     justify-content: right;
@@ -33,7 +34,7 @@ body {
     font-size: 1.5rem;
     grid-row: 2;
     grid-column: 3;
-    width: 75px;
+    width: 100%;
 }
 
 .navButtons:hover {
