--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
-    background-color: #8cacbc;
+    /* background-color: #8cacbc; */
+    background: url(./assets/background.jpg);
+    font-family: 'Caveat', 'Sans-serrif';
 }
 #content {
     margin: 0 200px 20px 200px;
@@ -18,7 +20,7 @@ body {
     text-align: center;
     font-size: 70px;
     margin-bottom: 0;
-    font-family: 'Caveat';
+    
 }
 
 .header {
@@ -44,7 +46,9 @@ body {
     font-size: 1.5rem;
     grid-row: 2;
     grid-column: 3;
-    width: 100%;
+    width: 20%;
+    margin: auto;
+    font-family: 'Caveat';
 }
 
 .navButtons:hover {
@@ -56,14 +60,24 @@ body {
 .home {
     text-align: center;
     grid-column: 1 / 4;
-    grid-row: 3;
+    grid-row: 3 / 5;
     margin: auto 40px auto 40px;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+}
+
+.cookspic {
+    float: left;
+
 }
 
 .contact {
     grid-column: 2 / 3;
     text-align: center;
-    grid-row: 3;
+    grid-row: 3 / 5;
 
 }
 form > input {
@@ -79,7 +93,7 @@ form > input {
 .menu {
     grid-column: 2 / 3;
     text-align: center;
-    grid-row: 3;
+    grid-row: 3 / 5;
 }
 
 .menu > ul {
