--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
 #content {
     margin: 0 200px 20px 200px;
     background-color: steelblue;
-    height: 100vh;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -19,7 +19,8 @@ body {
     grid-column: 1 / 4;
     text-align: center;
     font-size: 70px;
-    margin-bottom: 0;
+    margin: auto 10px 0 10px;
+    border: 10px solid black;
     
 }
 
@@ -29,13 +30,10 @@ body {
     grid-column: 1 / 4;
     grid-row: 2;
     display: flex;
-    justify-content: right;
+    justify-content: center;
+    gap: 50px;
     align-items: center;
 
-}
-
-.header > h1 {
-    margin-right: 100px;
 }
 
 .navButtons {
@@ -47,7 +45,7 @@ body {
     grid-row: 2;
     grid-column: 3;
     width: 20%;
-    margin: auto;
+    margin-top: 0 auto 0 auto;
     font-family: 'Caveat';
 }
 
@@ -62,6 +60,20 @@ body {
     grid-column: 1 / 4;
     grid-row: 3 / 5;
     margin: auto 40px auto 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
+}
+
+.homeInfo {
+    grid-column: 1 / 3;
+    grid-row: 1 / 4;
+}
+
+.homeHours {
+    grid-column: 3;
+    grid-row: 1 / 4;
 }
 
 img {
@@ -84,6 +96,15 @@ form > input {
     border-radius: 20px;
     border: none;
     margin-bottom: 10px;
+}
+
+textarea {
+    width: 300px;
+    height: 150px;
+}
+
+textarea:focus::placeholder {
+    color: transparent;
 }
 
 .formFld {
